--- a/assets/estilos/SaSS/_vars.scss
+++ b/assets/estilos/SaSS/_vars.scss
@@ -23,6 +23,7 @@ $wth_res: (
     "mob_04": 481px,
     "mob_05": 570px,
     "mob_06": 660px,
+    "mob_07": 750px,
     "tbl_01": 768px,
     "pst_tbl": 922px,
     "dkp_01": 1024px,
